--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@ Use to fix the div with float */
     left: 0;
     right: 0;
     z-index: 1;
+    overflow: hidden;
 }
 
 #nav {
@@ -184,6 +185,7 @@ Use to fix the div with float */
     font-size: 14px;
 }
 
+#header .mobile-menu-btn,
 #header .search-btn {
     float: right;
     padding: 0 21px;
@@ -194,6 +196,15 @@ Use to fix the div with float */
     background-color: #F44336;
 }
 
+#header .mobile-menu-btn:hover {
+    background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon {
+    color: #000;
+}
+
+#header .menu-icon,
 #header .search-icon {
     color: #fff;
     font-size: 20px;
@@ -453,4 +464,5 @@ Use to fix the div with float */
 
 #footer .copyright a {
     color: rgba(0, 0, 0, 0.6);
+    <link rel="stylesheet" href="./assets/css/style.css">
 }
