--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,8 +1,89 @@
-@media(max-width: 740px) {
+/* PC */
+
+@media (min-width:1024px) {}
+
+
+/* Tablet and Mobile */
+
+@media(max-width:1023px) {
+    #nav .subnav a {
+        padding: 5px 12px;
+    }
+    .btn {
+        padding: 15px 16px;
+    }
+    #content .contact-form .form-control {
+        padding: 15px;
+        font-size: 16px;
+    }
+    #content .contact-info {
+        line-height: 2.0;
+    }
+    #content .contact-submit-btn {
+        font-size: 16px;
+    }
+    #footer .social-list {
+        font-size: 46px;
+    }
+    #footer .social-list a {
+        margin: 0 8px;
+    }
+    #footer .copyright a {
+        padding: 12px 0;
+        display: inline-block;
+    }
+}
+
+
+/* Tablet */
+
+@media(min-width:740px)and (max-width:1023px) {}
+
+
+/* Mobile */
+
+@media(max-width: 739px) {
+    .s-full-width,
+    .s-col-full {
+        width: 100% !important;
+    }
+    .s-mt-8 {
+        margin-top: 8px !important;
+    }
+    #nav {
+        display: block;
+        width: 100%;
+    }
     #nav>li {
+        display: block;
+    }
+    #nav>li:first-child {
+        display: inline-block;
+    }
+    #nav .subnav {
+        position: initial;
+        background: #333;
+    }
+    #nav li a {
+        padding: 1px 24px;
+    }
+    #nav .subnav a {
+        color: #fff;
+        padding: 5px 40px;
+    }
+    #header .mobile-menu-btn {
         display: block;
     }
     #header .search-btn {
         display: none;
+    }
+    #header {
+        overflow: hidden;
+    }
+    #content .member-img {
+        width: 60%;
+    }
+    #content .contact-form {
+        margin-top: 32px;
     }
 }
