--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,9 @@ Use to fix the div with float */
     display: inline-block;
     margin-top: 15px;
     border: none;
+    text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
@@ -106,6 +109,10 @@ Use to fix the div with float */
     margin-top: 16px !important;
 }
 
+.mt-32 {
+    margin-top: 32px !important;
+}
+
 
 /* Main */
 
@@ -119,7 +126,7 @@ Use to fix the div with float */
     left: 0;
     right: 0;
     z-index: 1;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 #nav {
@@ -191,6 +198,13 @@ Use to fix the div with float */
     padding: 0 21px;
 }
 
+#header .mobile-menu-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
+}
+
 #header .search-btn:hover {
     cursor: pointer;
     background-color: #F44336;
@@ -215,7 +229,7 @@ Use to fix the div with float */
     margin-top: 46px;
     /* Cách chiều rộng=chiều dài/2 */
     padding-top: 50%;
-    background: url('/assets/img/slider/slider_01.jpg') top center/ cover no-repeat;
+    background: url('../img/slider/slider_01.jpg') top center/ cover no-repeat;
     position: relative;
 }
 
@@ -241,6 +255,7 @@ Use to fix the div with float */
 #slider .text-description {
     font-size: 15px;
     margin-top: 15px;
+    text-shadow: 0 0 1px #000;
 }
 
 
@@ -285,7 +300,7 @@ Use to fix the div with float */
 }
 
 #content .member-list {
-    padding-top: 48px;
+    padding-top: 32px;
 }
 
 
@@ -343,8 +358,9 @@ Use to fix the div with float */
 
 #content .places-list {
     /* margin: 32px -8px 48px; */
-    margin-top: 32px;
     /* margin-bottom: 48px; */
+    /* margin-top: 32px; */
+    margin-top: 16px;
 }
 
 
@@ -414,6 +430,16 @@ Use to fix the div with float */
     display: inline-block;
 }
 
+.contact-info a {
+    color: #101aef;
+    opacity: 0.8;
+}
+
+.contact-info a:hover {
+    color: #101aef;
+    opacity: 1;
+}
+
 #content .contact-form {
     font-size: 15px;
 }
@@ -464,5 +490,4 @@ Use to fix the div with float */
 
 #footer .copyright a {
     color: rgba(0, 0, 0, 0.6);
-    <link rel="stylesheet" href="./assets/css/style.css">
 }
